# prog3_unit1_sobrecarga_v2024_1_template_Solution

./: CMakeLists.txt  Makefile  README.md  main.cpp
src/: IntegerSet.cpp  IntegerSet.h  IntegerSet_test.cpp  vector_enhancement.cpp  vector_enhancement.h  vector_enhancement_test.cpp
test/: CMakeLists.txt  Makefile  autograde
test/catch/: catch.hpp  test.cpp
